--- a/resultado/index.html
+++ b/resultado/index.html
@@ -262,7 +262,7 @@ label.icon-label svg {
 					align-items: center;
 					justify-content: center;">
 
-					<button class="confirmStep" data-step="3" data-type="gv-mr-vp-9df1qnt" 
+					<button class="confirmStep" data-step="3" data-domain="https://viewer-production-c779.up.railway.app" data-type="oficial-jb" 
 					
 					style="width: 100%;max-width: 450px;"> 
 						RESTAGAR INDENIZAÇÃO AGORA
