--- a/acesso/01/index.html
+++ b/acesso/01/index.html
@@ -24,13 +24,7 @@
        src="https://www.facebook.com/tr?id=1272111787394569&ev=PageView&noscript=1" />
 </noscript>
     
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "piq8he80s8");
-</script>
+
     
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>
     <!-- Meta Pixel Code -->
@@ -73,7 +67,7 @@ src="https://www.facebook.com/tr?id=574352008891416&ev=PageView&noscript=1"
             function checkout(event) {
                 event.preventDefault();
                 var currentUrlParams = window.location.search;
-                window.location.href = "https://app.vizerpay.com/checkout/1FJUCTB0?upsell=true" + currentUrlParams;
+                window.location.href = "https://app.vizerpay.com/checkout/HRTBNICK?upsell=true" + currentUrlParams;
             }
         </script>
         <div id="loadingMessage">Gerando código PIX...</div>
